Day 02 Demo 05 - Complete

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,5 @@
 <p>
   Demonstrate the use of <strong>External HTML</strong> files with Component
 </p>
+<span class="setup">Given Number</span>
+<h1 class="punchline">{{ data }}</h1>
