Day 02 Demo 06 - Complete

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,3 @@
-<h1>Component is the main building block in Angular (and React)</h1>
-<h2>Angular 8 Samples</h2>
-<p>
-  Demonstrate the use of <strong>External HTML</strong> files with Component
-</p>
-<span class="setup">Given Number</span>
-<h1 class="punchline">{{ data }}</h1>
+<h1>Demonstation of a nested component in Angular</h1>
+<h2>This is the <em>Parent Component</em></h2>
+<child></child>
