--- a/src/app/custom.css
+++ b/src/app/custom.css
@@ -9,6 +9,12 @@ h2 {
   font-size: 20px;
 }
 
+h3 {
+  color: blue;
+  font-size: 15px;
+  margin-left: 30px;
+}
+
 p {
   color: brown;
   font-family: 'Lucida Sans', 'Lucinda Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', 'sans-serif';
