Day 03 Demo 02 - Complete

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <div>  
   <span>Current Number is {{value1}}</span>      
   <br /><br />    
+  Display value in a input control: 
+  <input [value]="value1" title="value1"/>
+  <br /><br />
   <span>Current Number (formatted) is {{value1 | currency}}</span>  
   <br /><br />  
   <span>Current Date is {{dt1}}</span>  
