--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,6 @@
 <div>  
-  <span>Current Number is {{value1}}</span>      
-  <br /><br />    
-  Display value in a input control: 
-  <input [value]="value1" title="value1"/>
-  <br /><br />
-  <span>Current Number (formatted) is {{value1 | currency}}</span>  
+  <h2>Demo of Event Binding in Angular 8</h2>  
+  <input type="button" value="Click Me" class="btn-block" (click)="showAlert()" />  
   <br /><br />  
-  <span>Current Date is {{dt1}}</span>  
-  <br /><br />  
-  <span>Current Date (formatted) is {{dt1 | date}}</span>  
-  <br /><br />  
-  <span>Status is {{status}}</span>  
-  <br /><br />  
-  <span>{{status ? "This is a true status" :"This is a false status"}}</span>  
-  <br /><br />  
-  <span>{{returnString()}}</span>  
-</div>  
+  <input type="button" value="Mouse Enter" class="btn-block" (mouseenter)="showAlert()" />  
+</div> 
