Day 03 Demo 04 - Complete

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
 <div>  
-  <h2>Demo of Event Binding in Angular 8</h2>  
-  <input type="button" value="Click Me" class="btn-block" (click)="showAlert()" />  
-  <br /><br />  
-  <input type="button" value="Mouse Enter" class="btn-block" (mouseenter)="showAlert()" />  
+  <div>  
+      <span>Enter Your Name </span>  
+      <input [(ngModel)]="val" type="text" title="This is val" />  
+  </div>  
+  <div>  
+      <span>Your Name : </span>  
+      <span>{{val}}</span>  
+  </div>  
 </div> 
