Day 04 Demo 01 - Complete

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,14 @@
 <div>  
-  <message-info 
-    [message]="'Demonstration of an Input Property of a Component'" 
-    [alert-pop]="val">
-  </message-info>  
+  <h3>This is a Attribute Directives</h3>  
+  <span [class.red]="true">Attribute Change</span><br />  
+  <span [ngClass]="{'blue':true}">Attribute Change by Using NgClass</span><br />  
+  <span [ngStyle]="{'font-size':'14px','color':'green'}">Attribute Change by Using NgStyle</span>  
+  <br /><br />  
+  <span [class.cyan]="showColor">Attribute Change</span><br />  
+  <span [ngClass]="{'green':showColor}">Attribute Change by Using NgClass</span><br />  
+  <input type="button" value="Change Color" (click)="changeColor()" />  
+  <br /><br />  
+  <span [class.cyan]="showColor">Attribute Change</span><br />  
+  <span [ngClass]="{'cyan':showColor, 'red' : !showColor}">Attribute Change by Using NgClass</span><br />  
+  <br />  
 </div> 
